--- a/src/main/resources/FXML/DatBan.fxml
+++ b/src/main/resources/FXML/DatBan.fxml
@@ -41,9 +41,9 @@
                             <VBox alignment="CENTER_LEFT" spacing="6" styleClass="time-field">
                                 <Label styleClass="field-label" text="Giờ đặt" />
                                 <HBox alignment="CENTER" spacing="6">
-                                    <Spinner fx:id="hourSpinner" editable="true" initialValue="12" max="23" min="0" prefHeight="36.0" styleClass="time-spinner" />
+                                    <Spinner fx:id="hourSpinner" editable="true"  max="23" min="0" prefHeight="36.0" styleClass="time-spinner" />
                                     <Label styleClass="time-separator" text=":" />
-                                    <Spinner fx:id="minuteSpinner" editable="true" initialValue="30" max="59" min="0" prefHeight="35.0" prefWidth="100.0" styleClass="time-spinner" />
+                                    <Spinner fx:id="minuteSpinner" editable="true"  max="59" min="0" prefHeight="35.0" prefWidth="100.0" styleClass="time-spinner" />
                                 </HBox>
                             </VBox>
 
