--- a/src/main/resources/FXML/CheckOut.fxml
+++ b/src/main/resources/FXML/CheckOut.fxml
@@ -178,7 +178,7 @@
             <Label text="Mã Giảm Giá:" />
             <HBox spacing="5">
                 <TextField fx:id="txtMaGG" promptText="Nhập mã giảm giá" styleClass="filter-tf" HBox.hgrow="ALWAYS" />
-                <Button prefHeight="30.0" prefWidth="30.0" styleClass="icon-qr" text="📷" />
+                <Button fx:id="btnCamera" prefHeight="30.0" prefWidth="30.0" styleClass="icon-qr" text="📷" onAction="#handleCameraButton" />
             </HBox>
 
             <GridPane hgap="10" vgap="5">
