--- a/src/main/resources/FXML/BanGiaoCa.fxml
+++ b/src/main/resources/FXML/BanGiaoCa.fxml
@@ -20,7 +20,7 @@
 
     <!-- Phần trung tâm -->
     <center>
-        <AnchorPane id="center_Panel" maxHeight="800.0" prefHeight="800.0" prefWidth="1400.0" styleClass="center-content">
+        <AnchorPane id="center_Panel" styleClass="center-content">
             <AnchorPane layoutX="11.0" layoutY="553.0" prefHeight="189.0" prefWidth="685.0" styleClass="anchorPane_LabelBaoCao">
                 <children>
                     <GridPane alignment="CENTER" hgap="30" layoutX="70.0" layoutY="28.0" prefHeight="127.0" prefWidth="578.0" vgap="15">
@@ -42,18 +42,18 @@
                     </GridPane>
                 </children>
             </AnchorPane>
-         <VBox layoutX="11.0" layoutY="26.0" prefHeight="508.0" prefWidth="686.0" style="-fx-background-color: EFEFEF;-fx-background-radius: 20 20 28 28">
+         <VBox layoutX="11.0" layoutY="26.0" style="-fx-background-color: EFEFEF;-fx-background-radius: 20 20 28 28">
             <children>
-      
-      
+
+
                   <!-- Thanh tìm kiếm -->
                   <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="684.0" spacing="8" styleClass="menu-search-box">
                       <Label prefHeight="25.0" prefWidth="45.0" styleClass="search-icon" text="🔍" />
                       <TextField prefHeight="31.0" prefWidth="640.0" promptText="Tìm kiếm: bàn, số điện thoại, tên khách" styleClass="search-field" HBox.hgrow="ALWAYS" />
                   </HBox>
-      
-      
-      
+
+
+
                   <!-- Danh sách hóa đơn -->
                   <ScrollPane fitToWidth="true" prefHeight="461.0" prefWidth="671.0" style="-fx-background-color: EFEFEF;" styleClass="scroll_order">
                       <content>
@@ -66,7 +66,7 @@
                                       <Label styleClass="invoice-phone" text="SDT: 098765432" />
                                   </VBox>
                               </HBox>
-      
+
                                     <!-- Thẻ hóa đơn mẫu khác -->
                               <HBox alignment="CENTER_LEFT" spacing="10" styleClass="invoice-card">
                                   <Circle radius="20" style="-fx-fill: #d8d8d8;" />
@@ -85,10 +85,10 @@
 
     <!-- Phần bên phải -->
     <right>
-        <VBox fillWidth="false" maxHeight="818.0" prefWidth="373.0" styleClass="right-sidebar">
-         <AnchorPane prefHeight="770.0" prefWidth="360.0">
+        <VBox fillWidth="false" prefWidth="373.0" styleClass="right-sidebar">
+         <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
             <children>
-      
+
                   <!-- Nút kết ca -->
                   <Button layoutX="89.0" layoutY="637.0" prefHeight="45" prefWidth="165.0" styleClass="end-shift-btn" text="Kết Ca" />
                   <!-- Phần tiêu đề và vùng trắng trên -->
@@ -99,7 +99,7 @@
                      </VBox.margin>
                   </Label>
                   </VBox>
-      
+
                         <!-- Phần form màu xám -->
                   <VBox layoutX="12.0" layoutY="55.0" prefWidth="310.0" spacing="10.0" styleClass="form-section">
                       <Label styleClass="label_form-section" text="Ca làm" />
