--- a/src/main/resources/FXML/QRThanhToan.fxml
+++ b/src/main/resources/FXML/QRThanhToan.fxml
@@ -9,7 +9,7 @@
       xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="ui.controllers.QRThanhToanController"
       alignment="CENTER" spacing="15"
-      style="-fx-background-color: #ffffff; -fx-border-radius: 20; -fx-background-radius: 20; -fx-padding: 25;">
+      style="-fx-background-color: #ffffff; -fx-border-radius: 20; -fx-background-radius: 20; -fx-padding: 25; -fx-border-color: #E6763E">
 
     <Label fx:id="lblTieuDe" text="Quét mã QR để thanh toán"
            style="-fx-font-size: 18; -fx-font-weight: bold; -fx-text-fill: #333;" />
