--- a/src/main/resources/CSS/qlmenu.css
+++ b/src/main/resources/CSS/qlmenu.css
@@ -104,12 +104,12 @@
 .item-name {
     -fx-font-weight: bold;
     -fx-text-fill: #333;
-    -fx-font-size: 13px; /* chữ to hơn */
+    -fx-font-size: 12px; /* chữ to hơn */
     -fx-wrap-text: true;
-    -fx-text-alignment: center;
 }
 
 .item-price {
+
     -fx-text-fill: #ff8c66;
     -fx-font-weight: bold;
     -fx-background-color: #fff3eb;
@@ -117,6 +117,7 @@
     -fx-background-radius: 6;
     -fx-padding: 3 8;
     -fx-font-size: 10px; /* to hơn giá trị mặc định */
+    -fx-alignment: CENTER;
 }
 
 .menu-image {
@@ -158,3 +159,108 @@
     -fx-pref-width: 0;
 }
 
+/* ===== Phần thông tin chi tiết món (form bên phải) ===== */
+.dish-details-section {
+    -fx-alignment: center;
+    -fx-text-alignment: center;
+    -fx-background-color: white;
+    -fx-background-radius: 32 0 0 32;
+    -fx-padding: 20 0 0 0;
+}
+
+/* Tiêu đề chính */
+.main-title {
+    -fx-font-size: 20px;
+    -fx-font-weight: bold;
+    -fx-text-fill: white;
+    -fx-padding: 8;
+    -fx-background-color: #E6763E;
+    -fx-background-radius: 20;
+    -fx-alignment: center;
+}
+
+/* Form thông tin */
+.info-form-section {
+    -fx-background-color: white;
+    -fx-background-radius: 15;
+    -fx-padding: 25;
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.05), 3, 0, 0, 1);
+}
+
+.info-grid {
+    -fx-padding: 10 0 20 0;
+}
+
+.form-label {
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #2B1406;
+    -fx-alignment: CENTER_LEFT;
+}
+
+.form-value {
+    -fx-font-size: 14px;
+    -fx-text-fill: #333;
+
+    -fx-background-color: #f8f8f8;
+    -fx-background-radius: 5;
+    -fx-padding: 8 12;
+    -fx-font-weight: bold;
+    -fx-alignment: CENTER;
+}
+
+.form-input {
+    -fx-background-color: #f8f8f8;
+    -fx-background-radius: 8;
+    -fx-border-color: #dcdcdc;
+    -fx-border-radius: 8;
+    -fx-padding: 8 12;
+    -fx-font-size: 14px;
+}
+
+.form-combo {
+    -fx-background-color: #f8f8f8;
+    -fx-background-radius: 8;
+    -fx-border-color: #dcdcdc;
+    -fx-border-radius: 8;
+    -fx-padding: 8 12;
+    -fx-font-size: 14px;
+}
+
+/* ===== Nút hành động ===== */
+.right-action-buttons {
+    -fx-padding: 20;
+    -fx-alignment: center;
+    -fx-text-alignment: center;
+    -fx-spacing: 40;
+}
+
+.confirm-btn {
+    -fx-background-color: #27ae60;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-font-size: 14px;
+    -fx-background-radius: 25;
+    -fx-pref-height: 90;
+    -fx-pref-width: 130;
+    -fx-alignment: center;
+}
+
+.confirm-btn:hover {
+    -fx-background-color: #219653;
+}
+
+.delete-btn {
+    -fx-background-color: red;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-font-size: 14px;
+    -fx-background-radius: 25;
+    -fx-pref-height: 90;
+    -fx-pref-width: 130;
+    -fx-alignment: center;
+}
+
+.delete-btn:hover {
+    -fx-background-color: #e52c2c;
+}
