--- a/src/main/resources/FXML/CheckIn.fxml
+++ b/src/main/resources/FXML/CheckIn.fxml
@@ -15,8 +15,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.ComboBox?>
 <BorderPane prefHeight="800" prefWidth="1400" stylesheets="@../CSS/checkin.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1"
-fx:controller="ui.controllers.CheckinController">
+            fx:controller="ui.controllers.CheckinController">
 
 
     <!-- CENTER -->
@@ -97,8 +98,8 @@ fx:controller="ui.controllers.CheckinController">
                                         <DatePicker fx:id="dpThoiGian" styleClass="filter-input" />
                                     </HBox>
                                     <HBox styleClass="filter-row">
-                                        <Label styleClass="filter-label" text="Mã bàn:" />
-                                        <TextField fx:id="txtMaBan" promptText="Nhập mã bàn" styleClass="filter-input" />
+                                        <Label styleClass="filter-label" text="Khu vực:" />
+                                        <ComboBox fx:id="cboKhuVuc" promptText="Chọn khu vực" styleClass="filter-input" />
                                     </HBox>
                                 </children>
                             </VBox>
