--- a/src/main/resources/FXML/TraCuuHoaDon.fxml
+++ b/src/main/resources/FXML/TraCuuHoaDon.fxml
@@ -91,7 +91,7 @@
             <VBox prefHeight="162.0" prefWidth="624.0" spacing="8" styleClass="filter-box">
                 <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: white; -fx-background-radius: 20 20 28 28;">
                     <children>
-                        <Label prefHeight="39.0" prefWidth="624.0" styleClass="filter-title" text="Bộ lọc" />
+                        <Label prefHeight="33.0" prefWidth="1162.0" styleClass="filter-title" text="Bộ lọc" />
                     </children>
                 </HBox>
 
@@ -109,7 +109,7 @@
 
                     <Label styleClass="label_filter" text="Thời gian:" GridPane.columnIndex="2" />
                     <!-- Thay TextField bằng DatePicker -->
-                    <DatePicker fx:id="dpThoiGian" prefHeight="28.0" prefWidth="220.0" promptText="Chọn ngày" styleClass="filter-tf" GridPane.columnIndex="3" />
+                    <DatePicker fx:id="dpThoiGian" prefHeight="28.0" prefWidth="297.0" promptText="Chọn ngày" styleClass="filter-tf" GridPane.columnIndex="3" />
 
                     <!-- Hàng 2 -->
                     <Label styleClass="label_filter" text="SDT:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
@@ -118,7 +118,7 @@
 
                     <Label styleClass="label_filter" text="Khu vực:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                     <!-- Thêm fx:id cboKhuVuc -->
-                    <ComboBox fx:id="cboKhuVuc" prefHeight="30.0" prefWidth="312.0" promptText="-- chọn --" styleClass="uudai_combobox filter-tf" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                    <ComboBox fx:id="cboKhuVuc" prefHeight="27.0" prefWidth="297.0" promptText="-- chọn --" styleClass="uudai_combobox filter-tf" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                     <rowConstraints>
                         <RowConstraints />
                         <RowConstraints />
@@ -185,6 +185,16 @@
 
                     <Label styleClass="label_infoOrder" text="Mô tả:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
                     <TextArea fx:id="txtMoTa" prefHeight="76.0" prefRowCount="3" prefWidth="162.0" styleClass="textarea-custom" text="Giảm cay của các món ăn" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+               <rowConstraints>
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+               </rowConstraints>
                 </GridPane>
 
 
