--- a/src/main/resources/CSS/chonmon.css
+++ b/src/main/resources/CSS/chonmon.css
@@ -567,3 +567,13 @@
     -fx-effect: none;
     -fx-border-color: transparent;
 }
+
+.combo-boxSK {
+    -fx-pref-height: 26px;
+    -fx-font-size: 13px;
+    -fx-padding: 2 6 2 6;
+}
+
+.combo-boxSK .arrow-button {
+    -fx-padding: 0 6 0 6;
+}
