--- a/src/main/resources/FXML/BanGiaoCa.fxml
+++ b/src/main/resources/FXML/BanGiaoCa.fxml
@@ -91,7 +91,7 @@
             <children>
       
                   <!-- Nút kết ca -->
-                  <Button layoutX="89.0" layoutY="637.0" prefHeight="45" prefWidth="165.0" styleClass="end-shift-btn" text="Kết Ca" />
+                  <Button fx:id="btnKetCa" layoutX="89.0" layoutY="637.0" prefHeight="45" prefWidth="165.0" styleClass="end-shift-btn" text="Kết Ca" />
                   <!-- Phần tiêu đề và vùng trắng trên -->
                   <VBox layoutX="13.0" prefHeight="55.0" prefWidth="310.0" styleClass="header-section">
                       <Label prefHeight="55.0" prefWidth="312.0" styleClass="title-label" text="Báo Cáo Kết Ca">
