--- a/src/main/resources/CSS/checkout.css
+++ b/src/main/resources/CSS/checkout.css
@@ -93,7 +93,7 @@
 }
 
 .time-btn:hover {
-    -fx-background-color: while;
+    -fx-background-color: white;
     -fx-text-fill: #4BD1A0;
     -fx-background-radius: 20;
     -fx-border-radius: 20;
@@ -338,7 +338,7 @@
 }
 
 .checkout-btn {
-    -fx-background-color: #0078D7;
+    -fx-background-color: #E6763E;
     -fx-text-fill: white;
     -fx-font-size: 16px;
     -fx-font-weight: bold;
@@ -348,8 +348,14 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.25), 4, 0, 0, 3);
 }
 .checkout-btn:hover {
-    -fx-background-color: #0a8ef3;
+    -fx-background-color: white;
+    -fx-text-fill: #E6763E;
+    -fx-border-color: #E6763E;
+    -fx-border-radius: 10;
 }
 .checkout-btn:pressed {
-    -fx-background-color: #005fa3;
+    -fx-background-color: white;
+    -fx-text-fill: #E6763E;
+    -fx-border-color: #E6763E;
+    -fx-border-radius: 10;
 }
